fixed footer position on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ section {
         height: 500px;
     }
 
-    #footer {
+    /* #footer {
         position: relative;
-    }
+    } */
 }
